-----

All:

- Fix bug in wxFileConfig when recreating a group (Steven Van Ingelgem)
- Account for lines without newline at the end in wxExecute()
- Added wxString::char_str() and wchar_str() methods for forward
  compatiblity with wxWidgets 3

All (Unix):

- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse)

All (GUI):

- Allow status bar children in XRC (Edmunt Pienkowski)

wxMSW:

- Corrected wxStaticBox label appearance when its foreground colour was set:
  it didn't respect font size nor background colour then (Juan Antonio Ortega)
- Don't lose combobox text when it's opened and closed (Kolya Kosenko)
- Corrected GetChecked() for events from checkable menu items (smanders)
- Fixed popup menus under Windows NT 4
- Fixed bug in wxThread::Wait() in console applications introduced in 2.8.3
- Support right-aligned/centered owner drawn items in wxListCtrl (troelsk)
- Compilation fixed with WXWIN_COMPATIBILITY_2_6==0

wxGTK:

- Fix infinite loop when adding a wxStaticText control to a toolbar
- Fix wxNO_BORDER style for wxRadioBox (David Hart)
- wxComboBox::SetValue() doesn't emit EVT_TEXT anymore
- Fix wxTextCtrl::GetLineText() for empty lines (Marcin Wojdyr)

wxMac:

- Fix wxComboBox::SetSelection(wxNOT_FOUND) (Adrian Secord)

wxUniv:

- Fix wxTextCtrl::SetSelection(-1, -1) to behave as documented (Anders Larsen)
- Fix wxComboBox::SetSelection(wxNOT_FOUND)
- Fix setting background colour for controls with transparent background

>>>>>>> 1.1006.2.35

2.8.3
-----

All:

- Shut down the sockets gracefully (Sergio Aguayo)
- Fix extra indentation in wxHTML_ALIGN_JUSTIFY display (Chacal)

wxMac

- Corrected top border size for wxStaticBox with empty label (nusi).
- Fixed wxFont, wxPen and wxBrush accessor bugs introduced in 2.8.2.

wxMSW:

- Fixed wxFileName::GetSize() for large files.
- Fixed wxFont and wxPen accessor bugs introduced in 2.8.2.

wxGTK:

- Fixed handling of accelerators using PageUp/Down keys


2.8.2
-----

All:
