@@ -105,6 +105,7 @@ All (Unix):
 All (GUI):
 
 - Allow status bar children in XRC (Edmunt Pienkowski)
+- Fix memory leak in wxWizard when not using sizers for the page layout
 
 wxMSW:
 
